@@ -4,9 +4,8 @@
 from .termio import (
         clear_screen,
         hide_cursor, show_cursor,
-        print_at,
-        get_terminal_size,
-        cprint )
+        print_at, cprint, cprint_at,
+        get_terminal_size )
 
 import sys
 
@@ -33,7 +32,6 @@ class TerminalView():
         print("width = {}, height = {}".format(self.width, self.height))
 
         self.rows = []      # lines currently visible
-        #self.buf = buf      # the full content buffer
         self.cursor = [0,0] # screen cursor [row,col]
         self.status = ''    # status text (bottom of screen area)
 
@@ -41,55 +39,9 @@ class TerminalView():
         hide_cursor()
         clear_screen()
 
-        # the content buffer must conform to our view size and settings
-        #self.buf.reform(self)
-
-        self.print_all()
-
-    def print_all(self):
-        #for row in self.rows:
-        #    print(row, end='')
-
         for vrow in range(self.height - 1):
-
             for vcol in range(self.width):
-                c = None
-                cursor = False
-
-                color = self.COLOR_NORMAL
-                bgcolor = self.BGCOLOR_NORMAL
-                attrs = None
-
-                if vrow < len(self.rows) and vcol < len(self.rows[vrow]):
-                    c = self.rows[vrow][vcol]
-
-                if self.cursor[0] == vcol and self.cursor[1] == vrow:
-                    cursor = True
-                    color = self.COLOR_CURSOR
-                    #bgcolor = self.BGCOLOR_CURSOR
-                    attrs = self.ATTRS_CURSOR
-
-                if c == '\r' or c == b'\r':
-                    bgcolor = self.COLOR_CARRIAGE_RETURN
-                    c = 'r' if cursor else ' '
-
-                elif c == '\n' or c == b'\n':
-                    bgcolor = self.COLOR_NEW_LINE
-                    c = 'n' if cursor else ' '
-
-                elif c == '\t' or c == b'\t':
-                    bgcolor = self.COLOR_TAB
-                    #remains = ''.join([' ' for x in range(self.TAB_WIDTH - (vcol % self.TAB_WIDTH) - 1)])
-                    c = ('t' if cursor else ' ') #+ remains
-
-                elif not c:
-                    bgcolor = self.COLOR_NO_TEXT
-                    c = '$' if cursor else ' '
-
-                if color or bgcolor or attrs:
-                    cprint(c, color=color, on_color=('on_'+bgcolor) if bgcolor else None, attrs=attrs, end='')
-                else:
-                    print(c, end='')
+                self.refresh_char(vrow, vcol, move=False)
 
         sys.stdout.flush()
 
@@ -98,7 +50,7 @@ class TerminalView():
         diff = len(self.status) - len(text)
         end = ' ' * diff if diff > 0 else ''
 
-        print_at(row, 0, text, end=end)
+        print_at(row, 1, text, end=end)
 
         if diff > 0:
             # reset terminal cursor position
@@ -109,6 +61,76 @@ class TerminalView():
 
     def clear_status(self):
         self.set_status('')
+
+    def move_cursor(self, row, col):
+        old_row, old_col = self.cursor
+        self.cursor = [row, col]
+
+        self.refresh_char(old_row, old_col)
+        self.refresh_char(row, col)
+
+        sys.stdout.flush()
+
+    def move_left(self):
+        if self.cursor[1] > 0:
+            self.move_cursor(self.cursor[0], self.cursor[1] - 1)
+
+    def move_right(self):
+        if self.cursor[1] < self.width - 1:
+            self.move_cursor(self.cursor[0], self.cursor[1] + 1)
+
+    def move_up(self):
+        if self.cursor[0] > 0:
+            self.move_cursor(self.cursor[0] - 1, self.cursor[1])
+
+    def move_down(self):
+        if self.cursor[0] < self.height - 1:
+            self.move_cursor(self.cursor[0] + 1, self.cursor[1])
+
+    def refresh_char(self, row, col, move=True):
+        c = None
+        cursor = False
+
+        color = self.COLOR_NORMAL
+        bgcolor = self.BGCOLOR_NORMAL
+        attrs = None
+
+        if row < len(self.rows) and col < len(self.rows[row]):
+            c = self.rows[row][col]
+
+        if self.cursor[0] == row and self.cursor[1] == col:
+            cursor = True
+            color = self.COLOR_CURSOR
+            #bgcolor = self.BGCOLOR_CURSOR
+            attrs = self.ATTRS_CURSOR
+
+        if c == '\r' or c == b'\r':
+            bgcolor = self.COLOR_CARRIAGE_RETURN
+            c = 'r' if cursor else ' '
+
+        elif c == '\n' or c == b'\n':
+            bgcolor = self.COLOR_NEW_LINE
+            c = 'n' if cursor else ' '
+
+        elif c == '\t' or c == b'\t':
+            bgcolor = self.COLOR_TAB
+            c = ('t' if cursor else ' ')
+
+        elif not c:
+            bgcolor = self.COLOR_NO_TEXT
+            c = '$' if cursor else ' '
+
+        if color or bgcolor or attrs:
+            on_color = ('on_'+bgcolor) if bgcolor else None 
+            if move:
+                cprint_at(row+1, col+1, c, color=color, on_color=on_color, attrs=attrs, end='')
+            else:
+                cprint(c, color=color, on_color=on_color, attrs=attrs, end='')
+        else:
+            if move:
+                print_at(row+1, col+1, c, end='')
+            else:
+                print(c, end='')
 
     def build_row(self, text, start=0):
         row = ''
